Release 1.1
Added the support for GET request with paths in addition to the urls.

Modified the programs' versions used by the inner project (now it uses java 20 and maven 3.8.3)